--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,9 +5,19 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url(https://cdn.discordapp.com/attachments/385113889727184906/1047228365913993336/ea-play.webp);
+  background-repeat: none;
+  background-size: cover;
+  color: white;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#home {
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(34, 37, 41, 50%);
 }
